--- a/www/manifest.json
+++ b/www/manifest.json
@@ -3,15 +3,20 @@
     "short_name": "Music",
     "start_url": "index.html",
     "display": "standalone",
+    "theme_color": "#ffff",
     "icons": [{
       "src": "img/logo.png",
-      "sizes": "48x48",
+      "sizes": "58x58",
       "type": "image/png"
-    }],
+    },
+    {
+      "src": "img/logo144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    }
+  ],
     "related_applications": [{
-      "platform": "web"
-    }, {
-      "platform": "play",
-      "url": "https://play.google.com/store/apps/details?id=com.google.samples.apps.iosched"
+      "platform": "web",
+      "id": "algassby-project"
     }]
   }
